Move leave page popup much further down to ensure it's completely below header with proper gap

--- a/public/css/memoryGame.css
+++ b/public/css/memoryGame.css
@@ -168,7 +168,7 @@ body {
 }
 
 #leavePagePopUp{
-    top: 155px;
+    top: 180px;
 }
 
 /*H1's for the divs to post score or leave page*/
@@ -324,7 +324,7 @@ body {
     }
     
     #leavePagePopUp {
-        top: 145px;
+        top: 170px;
     }
     
     #goodJob,
@@ -375,7 +375,7 @@ body {
     }
     
     #leavePagePopUp {
-        top: 135px;
+        top: 160px;
     }
     
     #goodJob,
